Fixed incorrectly displaying content in intro card
Fixed the image by making it not resize when stretched and additionally
fixed left side content by making it align properly

--- a/style.css
+++ b/style.css
@@ -36,27 +36,62 @@ a,
     padding-bottom: 100px;
     display: flex;
     background-color: #1F2937;
+    justify-content: center;
+    align-items: flex-start;
+
+    gap: 20px
 }
 
 .left-side {
     display: flex;
     flex-direction: column;
-    margin-left: 200px;
     flex: 1;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-left: 200px;
 }
 
-.right-side{
-    margin-right: 200px;
+.left-side .left-side-content {
+    display: flex;
+    max-width: 400px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-shrink: 0;
+}
+
+.right-side {
     display: flex;
     flex: 1;
-    border-radius: 10px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-right: 200px;
+}
+
+.image {
+    display: flex;
+    border-radius: 40px;
+    flex-direction: row;
+    flex-shrink: 1;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.intro-card img {
+    display: flex;
+    align-self: flex-start;
+    flex-basis: auto;
+    flex: 0;
 }
 
 .intro-card .left-side .heading {
     font-size: 48px;
     font-weight: bolder;
     color: #f9faf8;
+    max-width: 400px;
+    justify-content: flex-start;
 }
+
 
 .intro-card .left-side .sign-up {
     display: flex;
@@ -70,4 +105,15 @@ a,
     border-radius: 5px;
     color: #f9faf8;
     border-color: #3882f6;
+    align-self: flex-start;
+}
+
+.intro-card .left-side .subtext {
+    max-width: 400px;
+    justify-content: flex-start;
+}
+
+.button-container {
+    display: flex;
+    justify-content: flex-start;
 }
